--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.26.1",
+    "@uploadthing/react": "^5.7.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "mongoose": "^7.6.3",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uploadthing": "^5.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^10",
