--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@clerk/nextjs": "^4.26.1",
     "@uploadthing/react": "^5.7.0",
     "axios": "^1.6.0",
