--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "mongoose": "^7.6.3",
-    "next": "14.0.0",
+    "next": "^14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
